<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" 
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/sicsr_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/index" 
        android:contentDescription="@string/imageDes"/>

    <EditText
        android:id="@+id/prn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberSigned"
        android:hint="@string/prn_hint" 
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/element_vertical_margin">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" 
        android:text="@string/pwd"
        android:hint="@string/pwdhint" 
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/element_vertical_margin"/>

    <Button
        android:id="@+id/loginbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonText" 
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/element_vertical_margin"/>

</LinearLayout>
