<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/bg">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sicsr"
        android:textColor="@color/text"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/element_vertical_margin"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/prn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberSigned"
        android:hint="@string/prn_hint" 
        android:textColor="@color/text"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/element_vertical_margin">

        <requestFocus />
    </EditText>
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="horizontal" 
	    android:background="@color/bg"
	    style="@android:attr/buttonBarStyle"
	    android:layout_marginTop="@dimen/element_vertical_margin">
	    
	    <Button
	        android:id="@+id/button1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/proceed_button"
	        android:textColor="@color/text" 
	        android:layout_weight="5"
	        android:layout_gravity="left"
	        android:background="@color/lg"
	        style="@android:attr/buttonBarButtonStyle" ></Button>	
	    <Button
	        android:id="@+id/button2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/help_button" 
	        android:layout_weight="5"
	        android:layout_gravity="right" 
	        style="@android:attr/buttonBarButtonStyle"/>
	    
	</LinearLayout>
</LinearLayout>
